# jumper

./: Cargo.toml  jumper.tiled-project  jumper.tiled-session  todo.md
assets/: Tileset.tsx  asdf.aseprite  basic_terrain_sheet.tsx  characters.tsx  constants.toml  jumping.tmx  long.tmx  plains_2.tmx  sheet.tsx  trick_list.json  untitled.tmx  untitled_old.tmx  world.world
assets/enemies/: enemy_1.toml
assets/tilesets/: Sprite-0002.aseprite
maps/: map.json
player/: user_stats.json
src/: components_resources.rs  main.rs  models.rs
src/plugins/: animation_manager.rs  camera_controls.rs  config_loader.rs  delete_manager.rs  level_loader.rs  mod.rs  physics.rs  player_manager.rs  trick_manager.rs
src/scenes/: home.rs  level.rs  map.rs  mod.rs
src/service/: constants.rs  mod.rs  user_stats.rs
