[package]
name = "jumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["serialize"]}
serde = "1.0.195"
serde_json = "1.0.111"
bevy_xpbd_2d = "0.3"
tiled = "0.11.2"
toml = "0.8.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
